2020 Mar 25 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.7.1
* Updated procedure of resolving imports
* Better memory management: a few memory leaks are fixed; the qutepart
  thirdparty text editor component C python parser leaks so it was replaced
  with the python written parser
* Bumping up the jedi library version to 0.16.0
* Bumping up the vulture library version to 1.3
* Bumping up the radon library version to 4.1.0
* Bumping up the pygments library version to 2.6.1
* Bumping up the qutepart editor version to 3.3.0.post1
* Adding the system info plugin
* Minor bug fixes

2020 Jan 01 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.7.0
* Adding pylint plugin
* Plugin manager bug fixes and minor improvements
* Graphics pane icon scaling in a uniform way
* Slight changes for the graphics primitives with icons
* Font selection dialogs for zoom level 0 instead of the font family selection
* Bumping up the cdmcfparser version to 2.2.3
* Bumping up the jedi library version to 0.15.2
* Bumping up the PyQt library version to 5.11.3
* Individual settings for each graphics primitive
* Changed policy of working with skins
* New rendering of the if statements RHS branches
* Updated colors for the default skin

2019 Oct 30 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.6.0
* Bug fix: allow grouping for the try-except blocks
* Bug fix: exception when selecting doc links
* CML doc support
* Embedded documentation significant update
* Bumping up the jedi library version to 0.15.1
* Bumping up the plantUML binary version to 1.2019.11

2019 Aug 05 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.5.2
* Bug fix: Exception when switching smart zoom level

2019 Jul 31 Sergey Satskiy <sergey.satskiy@tuta.io>

* Version 4.5.1
* PlantUML diagram support for markdown
* Self protection against invalid custom terminal command line
* Bumping up the cdmcfparser version to 2.2.1
* Bumping up the cdmpyparser version to 3.1.1