@@ -1,3 +1,9 @@
+XXXX XXX XX Sergey Satskiy <sergey.satskiy@tuta.io>
+
+* Version X.X.X
+* Better icons for some items
+* Fix: better sorting of the class decorators in various browsers
+
 2020 Mar 25 Sergey Satskiy <sergey.satskiy@tuta.io>
 
 * Version 4.7.1
